[gd_scene load_steps=5 format=3 uid="uid://cnc130s2fqjwn"]

[ext_resource type="Script" path="res://game.gd" id="1_v2vsc"]
[ext_resource type="PackedScene" uid="uid://c5xwo7mn2ppn8" path="res://unit_related/rivals/player.tscn" id="2_7oybt"]
[ext_resource type="PackedScene" uid="uid://cbapglj2oj1m7" path="res://hud/hud.tscn" id="5_goe03"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6yvb0"]
size = Vector2(1359, 785)

[node name="Game" type="Node2D"]
script = ExtResource("1_v2vsc")

[node name="Hud" parent="." instance=ExtResource("5_goe03")]

[node name="Sorted" type="Node2D" parent="."]

[node name="Player" parent="Sorted" instance=ExtResource("2_7oybt")]
position = Vector2(100, 360)

[node name="InkTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AISummonDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AISummonDetector"]
position = Vector2(641, 361)
shape = SubResource("RectangleShape2D_6yvb0")

[connection signal="timeout" from="InkTimer" to="." method="_on_ink_timer_timeout"]
[connection signal="body_entered" from="AISummonDetector" to="." method="_on_ai_summon_detector_body_entered"]
[connection signal="body_exited" from="AISummonDetector" to="." method="_on_ai_summon_detector_body_exited"]
